Updated JS for accordions, updated SCSS to make sure overflow was hidden to hide the ugliness.

--- a/css/feld.css
+++ b/css/feld.css
@@ -71,6 +71,7 @@ a {
 
 .accordion-content {
   max-height: 0;
+  overflow: hidden;
   transition: max-height 0.3s cubic-bezier(0, 1, 0, 1); }
   .accordion-content.accordion-expanded {
     display: block;
