--- a/scss/elements/_accordions.scss
+++ b/scss/elements/_accordions.scss
@@ -6,6 +6,7 @@
 
 .accordion-content {
   max-height: 0;
+  overflow: hidden;
   transition: max-height 0.3s cubic-bezier(0, 1, 0, 1);
 
   &.accordion-expanded {
